# multiagent-ai-interview

./: .gitignore  README.md  pyproject.toml  scheme.puml
src/interview/: feedback.py  interview_log.py  main.py  state.py  testagent.py  testagent2.py  testbench.py
src/interview/config/: settings.py  utils.py
src/interview/crews/: info_collector.py
src/interview/crews/direction_crew/: crew.py
src/interview/crews/direction_crew/config/: agents.yaml  tasks.yaml
src/interview/crews/evaluation_crew/: crew.py
src/interview/crews/evaluation_crew/config/: agents.yaml  tasks.yaml
src/interview/crews/final_crew/: crew.py
src/interview/crews/info_collector_crew/: crew.py
src/interview/crews/interview_runtime_crew/: crew.py
src/interview/crews/moderation_crew/: crew.py
src/interview/logs/: interview_log.1769798863.568524.json  interview_log.1769798863.568524.md  interview_log.1769802685.821897.json  interview_log.1769802685.821897.md  interview_log.1769805891.132773.json  interview_log.1769805891.132773.md  interview_log_1.json  interview_log_1.md  interview_log_2.json  interview_log_2.md  interview_log_3.json  interview_log_3.md  interview_log_4.json  interview_log_4.md  interview_log_5.json  interview_log_5.md  interview_report.1769798863.568524.md  interview_report.1769802685.821897.md  interview_report.1769805891.132773.md  interview_report_1.md  interview_report_2.md  interview_report_3.md  interview_report_4.md  interview_report_5.md
src/interview/tb_scenario/: m1.list  m2.list  m3.list  m4.list  m5.list  sc1.list  sc2.list
(+6 files in other folders)
