[project]
name = "interview"
version = "0.1.0"
description = "interview using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
interview = "interview.main:run"
run_crew = "interview.main:run"
train = "interview.main:train"
replay = "interview.main:replay"
test = "interview.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
